bugfix(ui): Breakpoints misalignment between layouts (#472)
* fix(ui): update breakpoint of ResponsivePageLayout

* fix(ui): fix style for small screen

* feat(ui): update styles

---------

--- a/src/ui/components/VerifyPasscode/VerifyPasscode.scss
+++ b/src/ui/components/VerifyPasscode/VerifyPasscode.scss
@@ -10,6 +10,18 @@
   .responsive-page-content {
     justify-content: space-evenly;
 
+    & > .error-message {
+      margin: 0;
+    }
+
+    & > .error-message-placeholder {
+      margin: 0;
+    }
+
+    & > .passcode-module-container {
+      margin: 0;
+    }
+
     .verify-passcode-title,
     .verify-passcode-description {
       text-align: center;
